--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: amcohrs-oradoo # Your GitHub username
-repo: BPGH # Your GitHub repository name
+repo: bpgh # Your GitHub repository name
 
 # Add your sites here
 sites:
